# autoretro_ab

./: .gitignore  README.md  environment.yml  pyproject.toml
annotations/: transcripts_with_coords.gtf
autoretro_ab/: cli.py
my_project/: Snakefile  config.yaml
my_project/config/: comparison.tsv  download.json  samples.tsv  srr_ids.txt
my_project2/: config.yaml
my_project2/config/: download.json
scripts/: build_locus_metadata.py  chromosomal_distribution.R  downloader.py  extract_top_hits.R  family_enrichment.R  filter_counts.R  merge_telescope_counts.py  run_alignment_and_telescope.py  run_deseq2_generic.R
workflow/: Snakefile  config.yaml
